kernel/simulator/parserBisonFlex/GenesysParser.output
Terminais sem uso na gramática

    oNOT
    RESOURCE
    fNR
    fMR
    fIRF
    fRESSEIZES
    fSTATE
    fSETSUM
    QUEUE
    fNQ
    fFIRSTINQ
    fLASTINQ
    fSAQUE
    fAQUE
    SET
    fNUMSET
    VARI
    FORM


Regras inúteis no analisador por causa de conflitos

   78 formula: CTEZERO

   79 funcaoPlugin: CTEZERO


Estado 9 conflitos: 102 de redução/redução
Estado 40 conflitos: 1 de deslocamento/redução
Estado 84 conflitos: 1 de deslocamento/redução
Estado 122 conflitos: 13 de deslocamento/redução
Estado 126 conflitos: 1 de deslocamento/redução
Estado 127 conflitos: 1 de deslocamento/redução
Estado 128 conflitos: 1 de deslocamento/redução
Estado 129 conflitos: 1 de deslocamento/redução
Estado 130 conflitos: 1 de deslocamento/redução
Estado 131 conflitos: 1 de deslocamento/redução
Estado 132 conflitos: 1 de deslocamento/redução
Estado 133 conflitos: 1 de deslocamento/redução
Estado 134 conflitos: 1 de deslocamento/redução
Estado 135 conflitos: 13 de deslocamento/redução
Estado 136 conflitos: 1 de deslocamento/redução
Estado 137 conflitos: 1 de deslocamento/redução
Estado 138 conflitos: 1 de deslocamento/redução
Estado 177 conflitos: 14 de deslocamento/redução
Estado 198 conflitos: 13 de deslocamento/redução
Estado 204 conflitos: 1 de deslocamento/redução
Estado 217 conflitos: 13 de deslocamento/redução
Estado 225 conflitos: 13 de deslocamento/redução


Gramática

    0 $accept: input "end of file"

    1 input: %empty
    2      | input '\n'
    3      | input programa
    4      | illegal
    5      | error '\n'

    6 programa: expressao

    7 expressao: numero
    8          | funcao
    9          | comando
   10          | atribuicao
   11          | aritmetica
   12          | relacional
   13          | "(" expressao ")"
   14          | atributo
   15          | variavel
   16          | formula

   17 numero: NUMD
   18       | NUMH

   19 aritmetica: expressao "+" expressao
   20           | expressao "-" expressao
   21           | expressao "/" expressao
   22           | expressao "*" expressao
   23           | expressao "^" expressao
   24           | fEXP "(" expressao ")"
   25           | "-" expressao

   26 relacional: expressao oAND expressao
   27           | expressao oOR expressao
   28           | expressao "<" expressao
   29           | expressao oLE expressao
   30           | expressao ">" expressao
   31           | expressao oGE expressao
   32           | expressao oEQ expressao
   33           | expressao oNE expressao

   34 comando: comandoIF
   35        | comandoFOR

   36 comandoIF: cIF "(" expressao ")" expressao cELSE expressao
   37          | cIF "(" expressao ")" expressao

   38 comandoFOR: cFOR variavel "=" expressao cTO expressao cDO atribuicao
   39           | cFOR atributo "=" expressao cTO expressao cDO atribuicao

   40 funcao: funcaoArit
   41       | funcaoTrig
   42       | funcaoProb
   43       | funcaoKernel
   44       | funcaoPlugin
   45       | funcaoUser

   46 funcaoKernel: fTNOW
   47             | fTFIN

   48 funcaoTrig: fSIN "(" expressao ")"
   49           | fCOS "(" expressao ")"

   50 funcaoArit: fROUND "(" expressao ")"
   51           | fFRAC "(" expressao ")"
   52           | fTRUNC "(" expressao ")"
   53           | fMOD "(" expressao "," expressao ")"

   54 funcaoProb: fRND1
   55           | fEXPO "(" expressao ")"
   56           | fNORM "(" expressao "," expressao ")"
   57           | fUNIF "(" expressao "," expressao ")"
   58           | fWEIB "(" expressao "," expressao ")"
   59           | fLOGN "(" expressao "," expressao ")"
   60           | fGAMM "(" expressao "," expressao ")"
   61           | fERLA "(" expressao "," expressao ")"
   62           | fTRIA "(" expressao "," expressao "," expressao ")"
   63           | fBETA "(" expressao "," expressao "," expressao "," expressao ")"
   64           | fDISC "(" listaparm ")"

   65 funcaoUser: "USER" "(" expressao ")"

   66 listaparm: listaparm "," expressao "," expressao
   67          | expressao "," expressao

   68 illegal: ILLEGAL

   69 atributo: ATRIB
   70         | ATRIB "[" expressao "]"
   71         | ATRIB "[" expressao "," expressao "]"
   72         | ATRIB "[" expressao "," expressao "," expressao "]"

   73 variavel: CTEZERO

   74 atribuicao: ATRIB "=" expressao
   75           | ATRIB "[" expressao "]" "=" expressao
   76           | ATRIB "[" expressao "," expressao "]" "=" expressao
   77           | ATRIB "[" expressao "," expressao "," expressao "]" "=" expressao

   78 formula: CTEZERO

   79 funcaoPlugin: CTEZERO
   80             | CSTAT
   81             | fTAVG "(" CSTAT ")"


Terminais, com as regras onde eles aparecem

    "end of file" (0) 0
    '\n' (10) 2 5
    error (256) 5
    NUMD <obj_t> (258) 17
    NUMH <obj_t> (259) 18
    CTEZERO <obj_t> (260) 73 78 79
    oLE <obj_t> (261) 29
    oGE <obj_t> (262) 31
    oEQ <obj_t> (263) 32
    oNE <obj_t> (264) 33
    oAND <obj_t> (265) 26
    oOR <obj_t> (266) 27
    oNOT <obj_t> (267)
    fSIN <obj_t> (268) 48
    fCOS <obj_t> (269) 49
    fROUND <obj_t> (270) 50
    fMOD <obj_t> (271) 53
    fTRUNC <obj_t> (272) 52
    fFRAC <obj_t> (273) 51
    fEXP <obj_t> (274) 24
    fRND1 <obj_t> (275) 54
    fEXPO <obj_t> (276) 55
    fNORM <obj_t> (277) 56
    fUNIF <obj_t> (278) 57
    fWEIB <obj_t> (279) 58
    fLOGN <obj_t> (280) 59
    fGAMM <obj_t> (281) 60
    fERLA <obj_t> (282) 61
    fTRIA <obj_t> (283) 62
    fBETA <obj_t> (284) 63
    fDISC <obj_t> (285) 64
    fTNOW <obj_t> (286) 46
    fTFIN <obj_t> (287) 47
    cIF <obj_t> (288) 36 37
    cELSE <obj_t> (289) 36
    cFOR <obj_t> (290) 38 39
    cTO <obj_t> (291) 38 39
    cDO <obj_t> (292) 38 39
    ATRIB <obj_t> (293) 69 70 71 72 74 75 76 77
    ILLEGAL <obj_t> (294) 68
    RESOURCE <obj_t> (295)
    fNR <obj_t> (296)
    fMR <obj_t> (297)
    fIRF <obj_t> (298)
    fRESSEIZES <obj_t> (299)
    fSTATE <obj_t> (300)
    fSETSUM <obj_t> (301)
    QUEUE <obj_t> (302)
    fNQ <obj_t> (303)
    fFIRSTINQ <obj_t> (304)
    fLASTINQ <obj_t> (305)
    fSAQUE <obj_t> (306)
    fAQUE <obj_t> (307)
    SET <obj_t> (308)
    fNUMSET <obj_t> (309)
    CSTAT <obj_t> (310) 80 81
    fTAVG <obj_t> (311) 81
    VARI <obj_t> (312)
    FORM <obj_t> (313)
    "(" (314) 13 24 36 37 48 49 50 51 52 53 55 56 57 58 59 60 61 62 63 64 65 81
    ")" (315) 13 24 36 37 48 49 50 51 52 53 55 56 57 58 59 60 61 62 63 64 65 81
    "[" (316) 70 71 72 75 76 77
    "]" (317) 70 71 72 75 76 77
    "+" (318) 19
    "-" (319) 20 25
    "*" (320) 22
    "^" (321) 23
    "/" (322) 21
    "<" (323) 28
    ">" (324) 30
    "=" (325) 38 39 74 75 76 77
    "," (326) 53 56 57 58 59 60 61 62 63 66 67 71 72 76 77
    NEG (327)
    "USER" (328) 65


Não terminais com as regras onde eles aparecem

    $accept (75)
        à esquerda: 0
    input <obj_t> (76)
        à esquerda: 1 2 3 4 5
        à direita: 0 2 3
    programa <obj_t> (77)
        à esquerda: 6
        à direita: 3
    expressao <obj_t> (78)
        à esquerda: 7 8 9 10 11 12 13 14 15 16
        à direita: 6 13 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 36 37 38 39 48 49 50 51 52 53 55 56 57 58 59 60 61 62 63 65 66 67 70 71 72 74 75 76 77
    numero <obj_t> (79)
        à esquerda: 17 18
        à direita: 7
    aritmetica <obj_t> (80)
        à esquerda: 19 20 21 22 23 24 25
        à direita: 11
    relacional <obj_t> (81)
        à esquerda: 26 27 28 29 30 31 32 33
        à direita: 12
    comando <obj_t> (82)
        à esquerda: 34 35
        à direita: 9
    comandoIF <obj_t> (83)
        à esquerda: 36 37
        à direita: 34
    comandoFOR <obj_t> (84)
        à esquerda: 38 39
        à direita: 35
    funcao <obj_t> (85)
        à esquerda: 40 41 42 43 44 45
        à direita: 8
    funcaoKernel <obj_t> (86)
        à esquerda: 46 47
        à direita: 43
    funcaoTrig <obj_t> (87)
        à esquerda: 48 49
        à direita: 41
    funcaoArit <obj_t> (88)
        à esquerda: 50 51 52 53
        à direita: 40
    funcaoProb <obj_t> (89)
        à esquerda: 54 55 56 57 58 59 60 61 62 63 64
        à direita: 42
    funcaoUser <obj_t> (90)
        à esquerda: 65
        à direita: 45
    listaparm <obj_t> (91)
        à esquerda: 66 67
        à direita: 64 66
    illegal <obj_t> (92)
        à esquerda: 68
        à direita: 4
    atributo <obj_t> (93)
        à esquerda: 69 70 71 72
        à direita: 14 39
    variavel <obj_t> (94)
        à esquerda: 73
        à direita: 15 38
    atribuicao <obj_t> (95)
        à esquerda: 74 75 76 77
        à direita: 10 38 39
    formula <obj_t> (96)
        à esquerda: 78
        à direita: 16
    funcaoPlugin <obj_t> (97)
        à esquerda: 79 80 81
        à direita: 44


Estado 0

    0 $accept: . input "end of file"

    error    deslocar, e ir ao estado 1
    ILLEGAL  deslocar, e ir ao estado 2

    "end of file"  reduzir usando a regra 1 (input)
    NUMD           reduzir usando a regra 1 (input)
    NUMH           reduzir usando a regra 1 (input)
    CTEZERO        reduzir usando a regra 1 (input)
    fSIN           reduzir usando a regra 1 (input)
    fCOS           reduzir usando a regra 1 (input)
    fROUND         reduzir usando a regra 1 (input)
    fMOD           reduzir usando a regra 1 (input)
    fTRUNC         reduzir usando a regra 1 (input)
    fFRAC          reduzir usando a regra 1 (input)
    fEXP           reduzir usando a regra 1 (input)
    fRND1          reduzir usando a regra 1 (input)
    fEXPO          reduzir usando a regra 1 (input)
    fNORM          reduzir usando a regra 1 (input)
    fUNIF          reduzir usando a regra 1 (input)
    fWEIB          reduzir usando a regra 1 (input)
    fLOGN          reduzir usando a regra 1 (input)
    fGAMM          reduzir usando a regra 1 (input)
    fERLA          reduzir usando a regra 1 (input)
    fTRIA          reduzir usando a regra 1 (input)
    fBETA          reduzir usando a regra 1 (input)
    fDISC          reduzir usando a regra 1 (input)
    fTNOW          reduzir usando a regra 1 (input)
    fTFIN          reduzir usando a regra 1 (input)
    cIF            reduzir usando a regra 1 (input)
    cFOR           reduzir usando a regra 1 (input)
    ATRIB          reduzir usando a regra 1 (input)
    CSTAT          reduzir usando a regra 1 (input)
    fTAVG          reduzir usando a regra 1 (input)
    "("            reduzir usando a regra 1 (input)
    "-"            reduzir usando a regra 1 (input)
    '\n'           reduzir usando a regra 1 (input)
    "USER"         reduzir usando a regra 1 (input)

    input    ir ao estado 3
    illegal  ir ao estado 4


Estado 1

    5 input: error . '\n'

    '\n'  deslocar, e ir ao estado 5


Estado 2

   68 illegal: ILLEGAL .

    $padrão  reduzir usando a regra 68 (illegal)


Estado 3

    0 $accept: input . "end of file"
    2 input: input . '\n'
    3      | input . programa

    "end of file"  deslocar, e ir ao estado 6
    NUMD           deslocar, e ir ao estado 7
    NUMH           deslocar, e ir ao estado 8
    CTEZERO        deslocar, e ir ao estado 9
    fSIN           deslocar, e ir ao estado 10
    fCOS           deslocar, e ir ao estado 11
    fROUND         deslocar, e ir ao estado 12
    fMOD           deslocar, e ir ao estado 13
    fTRUNC         deslocar, e ir ao estado 14
    fFRAC          deslocar, e ir ao estado 15
    fEXP           deslocar, e ir ao estado 16
    fRND1          deslocar, e ir ao estado 17
    fEXPO          deslocar, e ir ao estado 18
    fNORM          deslocar, e ir ao estado 19
    fUNIF          deslocar, e ir ao estado 20
    fWEIB          deslocar, e ir ao estado 21
    fLOGN          deslocar, e ir ao estado 22
    fGAMM          deslocar, e ir ao estado 23
    fERLA          deslocar, e ir ao estado 24
    fTRIA          deslocar, e ir ao estado 25
    fBETA          deslocar, e ir ao estado 26
    fDISC          deslocar, e ir ao estado 27
    fTNOW          deslocar, e ir ao estado 28
    fTFIN          deslocar, e ir ao estado 29
    cIF            deslocar, e ir ao estado 30
    cFOR           deslocar, e ir ao estado 31
    ATRIB          deslocar, e ir ao estado 32
    CSTAT          deslocar, e ir ao estado 33
    fTAVG          deslocar, e ir ao estado 34
    "("            deslocar, e ir ao estado 35
    "-"            deslocar, e ir ao estado 36
    '\n'           deslocar, e ir ao estado 37
    "USER"         deslocar, e ir ao estado 38

    programa      ir ao estado 39
    expressao     ir ao estado 40
    numero        ir ao estado 41
    aritmetica    ir ao estado 42
    relacional    ir ao estado 43
    comando       ir ao estado 44
    comandoIF     ir ao estado 45
    comandoFOR    ir ao estado 46
    funcao        ir ao estado 47
    funcaoKernel  ir ao estado 48
    funcaoTrig    ir ao estado 49
    funcaoArit    ir ao estado 50
    funcaoProb    ir ao estado 51
    funcaoUser    ir ao estado 52
    atributo      ir ao estado 53
    variavel      ir ao estado 54
    atribuicao    ir ao estado 55
    formula       ir ao estado 56
    funcaoPlugin  ir ao estado 57


Estado 4

    4 input: illegal .

    $padrão  reduzir usando a regra 4 (input)


Estado 5

    5 input: error '\n' .

    $padrão  reduzir usando a regra 5 (input)


Estado 6

    0 $accept: input "end of file" .

    $padrão  aceitar


Estado 7

   17 numero: NUMD .

    $padrão  reduzir usando a regra 17 (numero)


Estado 8

   18 numero: NUMH .

    $padrão  reduzir usando a regra 18 (numero)


Estado 9

   73 variavel: CTEZERO .
   78 formula: CTEZERO .
   79 funcaoPlugin: CTEZERO .

    "end of file"  reduzir usando a regra 73 (variavel)
    "end of file"  [reduzir usando a regra 78 (formula)]
    "end of file"  [reduzir usando a regra 79 (funcaoPlugin)]
    NUMD           reduzir usando a regra 73 (variavel)
    NUMD           [reduzir usando a regra 78 (formula)]
    NUMD           [reduzir usando a regra 79 (funcaoPlugin)]
    NUMH           reduzir usando a regra 73 (variavel)
    NUMH           [reduzir usando a regra 78 (formula)]
    NUMH           [reduzir usando a regra 79 (funcaoPlugin)]
    CTEZERO        reduzir usando a regra 73 (variavel)
    CTEZERO        [reduzir usando a regra 78 (formula)]
    CTEZERO        [reduzir usando a regra 79 (funcaoPlugin)]
    oLE            reduzir usando a regra 73 (variavel)
    oLE            [reduzir usando a regra 78 (formula)]
    oLE            [reduzir usando a regra 79 (funcaoPlugin)]
    oGE            reduzir usando a regra 73 (variavel)
    oGE            [reduzir usando a regra 78 (formula)]
    oGE            [reduzir usando a regra 79 (funcaoPlugin)]
    oEQ            reduzir usando a regra 73 (variavel)
    oEQ            [reduzir usando a regra 78 (formula)]
    oEQ            [reduzir usando a regra 79 (funcaoPlugin)]
    oNE            reduzir usando a regra 73 (variavel)
    oNE            [reduzir usando a regra 78 (formula)]
    oNE            [reduzir usando a regra 79 (funcaoPlugin)]
    oAND           reduzir usando a regra 73 (variavel)
    oAND           [reduzir usando a regra 78 (formula)]
    oAND           [reduzir usando a regra 79 (funcaoPlugin)]
    oOR            reduzir usando a regra 73 (variavel)
    oOR            [reduzir usando a regra 78 (formula)]
    oOR            [reduzir usando a regra 79 (funcaoPlugin)]
    fSIN           reduzir usando a regra 73 (variavel)
    fSIN           [reduzir usando a regra 78 (formula)]
    fSIN           [reduzir usando a regra 79 (funcaoPlugin)]
    fCOS           reduzir usando a regra 73 (variavel)
    fCOS           [reduzir usando a regra 78 (formula)]
    fCOS           [reduzir usando a regra 79 (funcaoPlugin)]
    fROUND         reduzir usando a regra 73 (variavel)
    fROUND         [reduzir usando a regra 78 (formula)]
    fROUND         [reduzir usando a regra 79 (funcaoPlugin)]
    fMOD           reduzir usando a regra 73 (variavel)
    fMOD           [reduzir usando a regra 78 (formula)]
    fMOD           [reduzir usando a regra 79 (funcaoPlugin)]
    fTRUNC         reduzir usando a regra 73 (variavel)
    fTRUNC         [reduzir usando a regra 78 (formula)]
    fTRUNC         [reduzir usando a regra 79 (funcaoPlugin)]
    fFRAC          reduzir usando a regra 73 (variavel)
    fFRAC          [reduzir usando a regra 78 (formula)]
    fFRAC          [reduzir usando a regra 79 (funcaoPlugin)]
    fEXP           reduzir usando a regra 73 (variavel)
    fEXP           [reduzir usando a regra 78 (formula)]
    fEXP           [reduzir usando a regra 79 (funcaoPlugin)]
    fRND1          reduzir usando a regra 73 (variavel)
    fRND1          [reduzir usando a regra 78 (formula)]
    fRND1          [reduzir usando a regra 79 (funcaoPlugin)]
    fEXPO          reduzir usando a regra 73 (variavel)
    fEXPO          [reduzir usando a regra 78 (formula)]
    fEXPO          [reduzir usando a regra 79 (funcaoPlugin)]
    fNORM          reduzir usando a regra 73 (variavel)
    fNORM          [reduzir usando a regra 78 (formula)]
    fNORM          [reduzir usando a regra 79 (funcaoPlugin)]
    fUNIF          reduzir usando a regra 73 (variavel)
    fUNIF          [reduzir usando a regra 78 (formula)]
    fUNIF          [reduzir usando a regra 79 (funcaoPlugin)]
    fWEIB          reduzir usando a regra 73 (variavel)
    fWEIB          [reduzir usando a regra 78 (formula)]
    fWEIB          [reduzir usando a regra 79 (funcaoPlugin)]
    fLOGN          reduzir usando a regra 73 (variavel)
    fLOGN          [reduzir usando a regra 78 (formula)]
    fLOGN          [reduzir usando a regra 79 (funcaoPlugin)]
    fGAMM          reduzir usando a regra 73 (variavel)
    fGAMM          [reduzir usando a regra 78 (formula)]
    fGAMM          [reduzir usando a regra 79 (funcaoPlugin)]
    fERLA          reduzir usando a regra 73 (variavel)
    fERLA          [reduzir usando a regra 78 (formula)]
    fERLA          [reduzir usando a regra 79 (funcaoPlugin)]
    fTRIA          reduzir usando a regra 73 (variavel)
    fTRIA          [reduzir usando a regra 78 (formula)]
    fTRIA          [reduzir usando a regra 79 (funcaoPlugin)]
    fBETA          reduzir usando a regra 73 (variavel)
    fBETA          [reduzir usando a regra 78 (formula)]
    fBETA          [reduzir usando a regra 79 (funcaoPlugin)]
    fDISC          reduzir usando a regra 73 (variavel)
    fDISC          [reduzir usando a regra 78 (formula)]
    fDISC          [reduzir usando a regra 79 (funcaoPlugin)]
    fTNOW          reduzir usando a regra 73 (variavel)
    fTNOW          [reduzir usando a regra 78 (formula)]
    fTNOW          [reduzir usando a regra 79 (funcaoPlugin)]
    fTFIN          reduzir usando a regra 73 (variavel)
    fTFIN          [reduzir usando a regra 78 (formula)]
    fTFIN          [reduzir usando a regra 79 (funcaoPlugin)]
    cIF            reduzir usando a regra 73 (variavel)
    cIF            [reduzir usando a regra 78 (formula)]
    cIF            [reduzir usando a regra 79 (funcaoPlugin)]
    cELSE          reduzir usando a regra 73 (variavel)
    cELSE          [reduzir usando a regra 78 (formula)]
    cELSE          [reduzir usando a regra 79 (funcaoPlugin)]
    cFOR           reduzir usando a regra 73 (variavel)
    cFOR           [reduzir usando a regra 78 (formula)]
    cFOR           [reduzir usando a regra 79 (funcaoPlugin)]
    cTO            reduzir usando a regra 73 (variavel)
    cTO            [reduzir usando a regra 78 (formula)]
    cTO            [reduzir usando a regra 79 (funcaoPlugin)]
    cDO            reduzir usando a regra 73 (variavel)
    cDO            [reduzir usando a regra 78 (formula)]
    cDO            [reduzir usando a regra 79 (funcaoPlugin)]
    ATRIB          reduzir usando a regra 73 (variavel)
    ATRIB          [reduzir usando a regra 78 (formula)]
    ATRIB          [reduzir usando a regra 79 (funcaoPlugin)]
    CSTAT          reduzir usando a regra 73 (variavel)
    CSTAT          [reduzir usando a regra 78 (formula)]
    CSTAT          [reduzir usando a regra 79 (funcaoPlugin)]
    fTAVG          reduzir usando a regra 73 (variavel)
    fTAVG          [reduzir usando a regra 78 (formula)]
    fTAVG          [reduzir usando a regra 79 (funcaoPlugin)]
    "("            reduzir usando a regra 73 (variavel)
    "("            [reduzir usando a regra 78 (formula)]
    "("            [reduzir usando a regra 79 (funcaoPlugin)]
    ")"            reduzir usando a regra 73 (variavel)
    ")"            [reduzir usando a regra 78 (formula)]
    ")"            [reduzir usando a regra 79 (funcaoPlugin)]
    "]"            reduzir usando a regra 73 (variavel)
    "]"            [reduzir usando a regra 78 (formula)]
    "]"            [reduzir usando a regra 79 (funcaoPlugin)]
    "+"            reduzir usando a regra 73 (variavel)
    "+"            [reduzir usando a regra 78 (formula)]
    "+"            [reduzir usando a regra 79 (funcaoPlugin)]
    "-"            reduzir usando a regra 73 (variavel)
    "-"            [reduzir usando a regra 78 (formula)]
    "-"            [reduzir usando a regra 79 (funcaoPlugin)]
    "*"            reduzir usando a regra 73 (variavel)
    "*"            [reduzir usando a regra 78 (formula)]
    "*"            [reduzir usando a regra 79 (funcaoPlugin)]
    "^"            reduzir usando a regra 73 (variavel)
    "^"            [reduzir usando a regra 78 (formula)]
    "^"            [reduzir usando a regra 79 (funcaoPlugin)]
    "/"            reduzir usando a regra 73 (variavel)
    "/"            [reduzir usando a regra 78 (formula)]
    "/"            [reduzir usando a regra 79 (funcaoPlugin)]
    "<"            reduzir usando a regra 73 (variavel)
    "<"            [reduzir usando a regra 78 (formula)]
    "<"            [reduzir usando a regra 79 (funcaoPlugin)]
    ">"            reduzir usando a regra 73 (variavel)
    ">"            [reduzir usando a regra 78 (formula)]
    ">"            [reduzir usando a regra 79 (funcaoPlugin)]
    ","            reduzir usando a regra 73 (variavel)
    ","            [reduzir usando a regra 78 (formula)]
    ","            [reduzir usando a regra 79 (funcaoPlugin)]
    '\n'           reduzir usando a regra 73 (variavel)
    '\n'           [reduzir usando a regra 78 (formula)]
    '\n'           [reduzir usando a regra 79 (funcaoPlugin)]
    "USER"         reduzir usando a regra 73 (variavel)
    "USER"         [reduzir usando a regra 78 (formula)]
    "USER"         [reduzir usando a regra 79 (funcaoPlugin)]
    $padrão       reduzir usando a regra 73 (variavel)


Estado 10

   48 funcaoTrig: fSIN . "(" expressao ")"

    "("  deslocar, e ir ao estado 58


Estado 11

   49 funcaoTrig: fCOS . "(" expressao ")"

    "("  deslocar, e ir ao estado 59


Estado 12

   50 funcaoArit: fROUND . "(" expressao ")"

    "("  deslocar, e ir ao estado 60


Estado 13

   53 funcaoArit: fMOD . "(" expressao "," expressao ")"

    "("  deslocar, e ir ao estado 61


Estado 14

   52 funcaoArit: fTRUNC . "(" expressao ")"

    "("  deslocar, e ir ao estado 62


Estado 15

   51 funcaoArit: fFRAC . "(" expressao ")"

    "("  deslocar, e ir ao estado 63


Estado 16

   24 aritmetica: fEXP . "(" expressao ")"

    "("  deslocar, e ir ao estado 64


Estado 17

   54 funcaoProb: fRND1 .

    $padrão  reduzir usando a regra 54 (funcaoProb)


Estado 18

   55 funcaoProb: fEXPO . "(" expressao ")"

    "("  deslocar, e ir ao estado 65


Estado 19

   56 funcaoProb: fNORM . "(" expressao "," expressao ")"

    "("  deslocar, e ir ao estado 66


Estado 20

   57 funcaoProb: fUNIF . "(" expressao "," expressao ")"

    "("  deslocar, e ir ao estado 67


Estado 21

   58 funcaoProb: fWEIB . "(" expressao "," expressao ")"

    "("  deslocar, e ir ao estado 68


Estado 22

   59 funcaoProb: fLOGN . "(" expressao "," expressao ")"

    "("  deslocar, e ir ao estado 69


Estado 23

   60 funcaoProb: fGAMM . "(" expressao "," expressao ")"

    "("  deslocar, e ir ao estado 70


Estado 24

   61 funcaoProb: fERLA . "(" expressao "," expressao ")"

    "("  deslocar, e ir ao estado 71


Estado 25

   62 funcaoProb: fTRIA . "(" expressao "," expressao "," expressao ")"

    "("  deslocar, e ir ao estado 72


Estado 26

   63 funcaoProb: fBETA . "(" expressao "," expressao "," expressao "," expressao ")"

    "("  deslocar, e ir ao estado 73


Estado 27

   64 funcaoProb: fDISC . "(" listaparm ")"

    "("  deslocar, e ir ao estado 74


Estado 28

   46 funcaoKernel: fTNOW .

    $padrão  reduzir usando a regra 46 (funcaoKernel)


Estado 29

   47 funcaoKernel: fTFIN .

    $padrão  reduzir usando a regra 47 (funcaoKernel)


Estado 30

   36 comandoIF: cIF . "(" expressao ")" expressao cELSE expressao
   37          | cIF . "(" expressao ")" expressao

    "("  deslocar, e ir ao estado 75


Estado 31

   38 comandoFOR: cFOR . variavel "=" expressao cTO expressao cDO atribuicao
   39           | cFOR . atributo "=" expressao cTO expressao cDO atribuicao

    CTEZERO  deslocar, e ir ao estado 76
    ATRIB    deslocar, e ir ao estado 77

    atributo  ir ao estado 78
    variavel  ir ao estado 79


Estado 32

   69 atributo: ATRIB .
   70         | ATRIB . "[" expressao "]"
   71         | ATRIB . "[" expressao "," expressao "]"
   72         | ATRIB . "[" expressao "," expressao "," expressao "]"
   74 atribuicao: ATRIB . "=" expressao
   75           | ATRIB . "[" expressao "]" "=" expressao
   76           | ATRIB . "[" expressao "," expressao "]" "=" expressao
   77           | ATRIB . "[" expressao "," expressao "," expressao "]" "=" expressao

    "["  deslocar, e ir ao estado 80
    "="  deslocar, e ir ao estado 81

    $padrão  reduzir usando a regra 69 (atributo)


Estado 33

   80 funcaoPlugin: CSTAT .

    $padrão  reduzir usando a regra 80 (funcaoPlugin)


Estado 34

   81 funcaoPlugin: fTAVG . "(" CSTAT ")"

    "("  deslocar, e ir ao estado 82


Estado 35

   13 expressao: "(" . expressao ")"

    NUMD     deslocar, e ir ao estado 7
    NUMH     deslocar, e ir ao estado 8
    CTEZERO  deslocar, e ir ao estado 9
    fSIN     deslocar, e ir ao estado 10
    fCOS     deslocar, e ir ao estado 11
    fROUND   deslocar, e ir ao estado 12
    fMOD     deslocar, e ir ao estado 13
    fTRUNC   deslocar, e ir ao estado 14
    fFRAC    deslocar, e ir ao estado 15
    fEXP     deslocar, e ir ao estado 16
    fRND1    deslocar, e ir ao estado 17
    fEXPO    deslocar, e ir ao estado 18
    fNORM    deslocar, e ir ao estado 19
    fUNIF    deslocar, e ir ao estado 20
    fWEIB    deslocar, e ir ao estado 21
    fLOGN    deslocar, e ir ao estado 22
    fGAMM    deslocar, e ir ao estado 23
    fERLA    deslocar, e ir ao estado 24
    fTRIA    deslocar, e ir ao estado 25
    fBETA    deslocar, e ir ao estado 26
    fDISC    deslocar, e ir ao estado 27
    fTNOW    deslocar, e ir ao estado 28
    fTFIN    deslocar, e ir ao estado 29
    cIF      deslocar, e ir ao estado 30
    cFOR     deslocar, e ir ao estado 31
    ATRIB    deslocar, e ir ao estado 32
    CSTAT    deslocar, e ir ao estado 33
    fTAVG    deslocar, e ir ao estado 34
    "("      deslocar, e ir ao estado 35
    "-"      deslocar, e ir ao estado 36
    "USER"   deslocar, e ir ao estado 38

    expressao     ir ao estado 83
    numero        ir ao estado 41
    aritmetica    ir ao estado 42
    relacional    ir ao estado 43
    comando       ir ao estado 44
    comandoIF     ir ao estado 45
    comandoFOR    ir ao estado 46
    funcao        ir ao estado 47
    funcaoKernel  ir ao estado 48
    funcaoTrig    ir ao estado 49
    funcaoArit    ir ao estado 50
    funcaoProb    ir ao estado 51
    funcaoUser    ir ao estado 52
    atributo      ir ao estado 53
    variavel      ir ao estado 54
    atribuicao    ir ao estado 55
    formula       ir ao estado 56
    funcaoPlugin  ir ao estado 57


Estado 36

   25 aritmetica: "-" . expressao

    NUMD     deslocar, e ir ao estado 7
    NUMH     deslocar, e ir ao estado 8
    CTEZERO  deslocar, e ir ao estado 9
    fSIN     deslocar, e ir ao estado 10
    fCOS     deslocar, e ir ao estado 11
    fROUND   deslocar, e ir ao estado 12
    fMOD     deslocar, e ir ao estado 13
    fTRUNC   deslocar, e ir ao estado 14
    fFRAC    deslocar, e ir ao estado 15
    fEXP     deslocar, e ir ao estado 16
    fRND1    deslocar, e ir ao estado 17
    fEXPO    deslocar, e ir ao estado 18
    fNORM    deslocar, e ir ao estado 19
    fUNIF    deslocar, e ir ao estado 20
    fWEIB    deslocar, e ir ao estado 21
    fLOGN    deslocar, e ir ao estado 22
    fGAMM    deslocar, e ir ao estado 23
    fERLA    deslocar, e ir ao estado 24
    fTRIA    deslocar, e ir ao estado 25
    fBETA    deslocar, e ir ao estado 26
    fDISC    deslocar, e ir ao estado 27
    fTNOW    deslocar, e ir ao estado 28
    fTFIN    deslocar, e ir ao estado 29
    cIF      deslocar, e ir ao estado 30
    cFOR     deslocar, e ir ao estado 31
    ATRIB    deslocar, e ir ao estado 32
    CSTAT    deslocar, e ir ao estado 33
    fTAVG    deslocar, e ir ao estado 34
    "("      deslocar, e ir ao estado 35
    "-"      deslocar, e ir ao estado 36
    "USER"   deslocar, e ir ao estado 38

    expressao     ir ao estado 84
    numero        ir ao estado 41
    aritmetica    ir ao estado 42
    relacional    ir ao estado 43
    comando       ir ao estado 44
    comandoIF     ir ao estado 45
    comandoFOR    ir ao estado 46
    funcao        ir ao estado 47
    funcaoKernel  ir ao estado 48
    funcaoTrig    ir ao estado 49
    funcaoArit    ir ao estado 50
    funcaoProb    ir ao estado 51
    funcaoUser    ir ao estado 52
    atributo      ir ao estado 53
    variavel      ir ao estado 54
    atribuicao    ir ao estado 55
    formula       ir ao estado 56
    funcaoPlugin  ir ao estado 57


Estado 37

    2 input: input '\n' .

    $padrão  reduzir usando a regra 2 (input)


Estado 38

   65 funcaoUser: "USER" . "(" expressao ")"

    "("  deslocar, e ir ao estado 85


Estado 39

    3 input: input programa .

    $padrão  reduzir usando a regra 3 (input)


Estado 40
